--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -201,7 +201,7 @@ lyrics_4 : "ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴀɴᴅ
 
 #Ping
 ping_1 : "» ᴩɪɴɢɪɴɢ ʙᴀʙʏ..."
-ping_2 : "🏓 ᴩᴏɴɢ : `{0}ᴍs`\n\n<b><u> 「ᴇʙᴅ ǫɴ Mᴜsɪᴄ」sʏsᴛᴇᴍ sᴛᴀᴛs :</u></b>\n\n✨ ᴜᴩᴛɪᴍᴇ : {2}\n❄ ʀᴀᴍ : {3}\n💫 ᴄᴩᴜ : {4}\n🔮 ᴅɪsᴋ : {5}\n☁️ ᴩʏ-ᴛɢᴄᴀʟʟs : `{6}ᴍs`\n\n|| ᴍᴀᴅᴇ ᴡɪᴛʜ 🖤 ʙʏ [ᴏᴡɴᴇʀ](https://t.me/MAFIA_RJ) 🥀 ||"
+ping_2 : "🏓 ᴩᴏɴɢ : `{0}ᴍs`\n\n<b><u> 「ᴇʙᴅ ǫɴ Mᴜsɪᴄ」sʏsᴛᴇᴍ sᴛᴀᴛs :</u></b>\n\n✨ ᴜᴩᴛɪᴍᴇ : {2}\n❄ ʀᴀᴍ : {3}\n💫 ᴄᴩᴜ : {4}\n🔮 ᴅɪsᴋ : {5}\n☁️ ᴩʏ-ᴛɢᴄᴀʟʟs : `{6}ᴍs`\n\n|| ᴍᴀᴅᴇ ᴡɪᴛʜ 🖤 ʙʏ [UNK](https://t.me/UNK_NETWORK) 🥀 ||"
 
 # Song
 song_1 : "ʏᴏᴜ ᴄᴀɴ ᴅᴏᴡɴʟᴏᴀᴅ ᴍᴜsɪᴄ ᴏʀ ᴠɪᴅᴇᴏ ꜰʀᴏᴍ ʏᴏᴜᴛᴜʙᴇ ᴏɴʟʏ ɪɴ ᴘʀɪᴠᴀᴛᴇ ᴄʜᴀᴛ. ᴘʟᴇᴀsᴇ sᴛᴀʀᴛ ᴍᴇ ɪɴ ᴘʀɪᴠᴀᴛᴇ ᴄʜᴀᴛ."
